bug fix v3: heroimage does not display on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,11 +141,6 @@ Miguel Nunez for the basic layout & functions of the hamburger menu
     .navbar {
         gap: 50%;
     }
-
-
-    #hero-image {
-        background-position: top center;
-    }
 }
 
 /*Hero Section*/
@@ -161,11 +156,17 @@ Miguel Nunez for the basic layout & functions of the hamburger menu
     width: 100%;
     height: 100%;
     position: relative;
-    background-image: url(/assets/images/hero.jpg);
+    background-image: url(/assets/images/hero-for-mobile.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
     background-clip: padding-box;
+}
+
+@media screen and (max-width:768px) {
+#hero-image {
+    background: url(./assets/images/hero-for-mobile.jpg);
+}
 }
 
 
